--- a/assets/css/user_sign_in.css
+++ b/assets/css/user_sign_in.css
@@ -1,26 +1,28 @@
 body {
-    margin: 0;
-    background-image: url(../images/login.webp);
-    background-repeat: no-repeat;
-    background-size: 140vh 105vh;
+	margin: 0;
+	background-image: url(../images/login.webp);
+	background-repeat: no-repeat;
+	background-size: 140vh 105vh;
 }
 
-.signin{
-    margin-left: 60%;
-    margin-right: 50px;
-    margin-top: 5%;
-    height: 480px;
-    background-color: rgb(206 183 56 / 63%);
-    border-radius: 10%;
-    text-align: center;
-    padding: 2%;
+.signin {
+	margin-left: 60%;
+	margin-right: 50px;
+	margin-top: 5%;
+	height: 480px;
+	background-color: rgb(206 183 56 / 63%);
+	border-radius: 10%;
+	text-align: center;
+	padding: 2%;
 	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
+
 .form {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
-input{
+
+input {
 	width: 60%;
 	height: 20px;
 	/* background: #e0dede; */
@@ -32,7 +34,8 @@ input{
 	outline: none;
 	border-radius: 5px;
 }
-button{
+
+button {
 	width: 60%;
 	height: 40px;
 	margin: 10px auto;
@@ -51,6 +54,21 @@ button{
 
 button:hover,
 button:focus {
-  box-shadow: 0 0.5em 0.5em -0.4em  rgb(70, 131, 127);
-  transform: translateY(-0.25em);
+	box-shadow: 0 0.5em 0.5em -0.4em rgb(70, 131, 127);
+	transform: translateY(-0.25em);
+}
+
+
+/* Media query for screens smaller than 768px */
+@media (max-width: 768px) {
+	.signin {
+		margin-left: 4%;
+		margin-right: 4%;
+	}
+
+	input,
+	button {
+		width: 80%;
+		/* Adjust the width as needed */
+	}
 }
