--- a/assets/css/user_sign_up.css
+++ b/assets/css/user_sign_up.css
@@ -1,27 +1,29 @@
 body {
-    margin: 0;
-    background-image: url(../images/clock.png);
-    background-repeat: no-repeat;
-    background-size: 110vh 105vh;
+	margin: 0;
+	background-image: url(../images/clock.png);
+	background-repeat: no-repeat;
+	background-size: 110vh 105vh;
 }
 
 
-.signup{
-    margin-left: 60%;
-    margin-right: 50px;
-    margin-top: 5%;
-    height: 480px;
-    background-color: rgb(238 192 220);
-    border-radius: 10%;
-    text-align: center;
-    padding: 2%;
+.signup {
+	margin-left: 60%;
+	margin-right: 50px;
+	margin-top: 5%;
+	height: 480px;
+	background-color: rgb(238 192 220);
+	border-radius: 10%;
+	text-align: center;
+	padding: 2%;
 	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
+
 .form {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
-input{
+
+input {
 	width: 60%;
 	height: 20px;
 	/* background: #e0dede; */
@@ -33,12 +35,14 @@ input{
 	outline: none;
 	border-radius: 5px;
 }
-button{
+
+button {
 	width: 60%;
 	height: 40px;
 	margin: 10px auto;
 	color: #fff;
-	background-color: rgb(242 107 246);;
+	background-color: rgb(242 107 246);
+	;
 	font-size: 1em;
 	font-weight: bold;
 	margin-top: 20px;
@@ -47,8 +51,24 @@ button{
 	border-radius: 5px;
 	cursor: pointer;
 }
+
 button:hover,
 button:focus {
-  box-shadow: 0 0.5em 0.5em -0.4em rgb(218, 210, 99);
-  transform: translateY(-0.25em);
+	box-shadow: 0 0.5em 0.5em -0.4em rgb(218, 210, 99);
+	transform: translateY(-0.25em);
+}
+
+
+/* Media query for screens smaller than 768px */
+@media (max-width: 768px) {
+	.signup {
+		margin-left: 5%;
+		margin-right: 5%;
+	}
+
+	input,
+	button {
+		width: 80%;
+		/* Adjust the width as needed */
+	}
 }
